# CTX

./: .cagevars.example  .ctxignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.context/: .cagevars.example.ctx  .ctxignore.ctx  .gitignore.ctx  .manifest  CLAUDE.md.ctx  Cargo.lock.ctx  Cargo.toml.ctx  README.md.ctx  clippy.toml.ctx  deny.toml.ctx  hashes.json  intent.md  rollup.ctx  rust-toolchain.toml.ctx  rustfmt.toml.ctx
.context/.claude/: rollup.ctx  settings.json.ctx
.context/agents/: README.md.ctx  hashes.json  rollup.ctx  summarizer-claude.py.ctx
.context/crates/: hashes.json  rollup.ctx
.context/crates/ctx-access/: rollup.ctx
.context/crates/ctx-brief/: hashes.json  rollup.ctx
.context/crates/ctx-cage/: Cargo.toml.ctx  hashes.json  rollup.ctx
.context/crates/ctx-check/: rollup.ctx
.context/crates/ctx-context/: Cargo.toml.ctx  hashes.json  rollup.ctx
.context/crates/ctx-core/: Cargo.toml.ctx  hashes.json  rollup.ctx
.context/crates/ctx-scan/: Cargo.toml.ctx  hashes.json  rollup.ctx
.context/crates/ctx-status/: hashes.json  rollup.ctx
.context/crates/ctx-summarize/: Cargo.toml.ctx  hashes.json  rollup.ctx
.context/crates/ctx-verify/: Cargo.toml.ctx  hashes.json  rollup.ctx
.context/docs/: DECISIONS.md.ctx  DYLINT_RULES.md.ctx  SANDBOX.md.ctx  SPEC.md.ctx  STATUS.md.ctx  UNIMPLEMENTED.md.ctx  hashes.json  rollup.ctx  status.json.ctx
.context/prompts/: README.md.ctx  auditor.md.ctx  hashes.json  rollup.ctx  summarizer-leaf.md.ctx  summarizer-rollup.md.ctx
.context/sandbox/: README.md.ctx  hashes.json  rollup.ctx
.context/scripts/: ci.sh.ctx  cycle_check.sh.ctx  gen_readme_architecture.sh.ctx  gen_tool_contracts.sh.ctx  hashes.json  machete_check.sh.ctx  no_allow_check.sh.ctx  rationale_check.py.ctx  retired_terms_check.sh.ctx  rollup.ctx  workspace_lints_check.sh.ctx
.context/template/: .gitattributes.ctx  .gitignore.ctx  Cargo.toml.ctx  clippy.toml.ctx  deny.toml.ctx  hashes.json  rollup.ctx  rust-toolchain.toml.ctx  rustfmt.toml.ctx
.context/template/.claude/: hashes.json  rollup.ctx  settings.json.ctx
.context/template/.github/: rollup.ctx
.context/template/scripts/: ci.sh.ctx  hashes.json  (+11 more)
agents/: README.md  summarizer-claude.py
crates/ctx-access/: Cargo.toml
crates/ctx-access/src/: access.rs  cache.rs  chain.rs  cli.rs  enforce.rs  env.rs  error.rs  lib.rs  main.rs  manifest.rs  report.rs
crates/ctx-access/tests/: enforce.rs
crates/ctx-brief/: Cargo.toml
crates/ctx-brief/src/: claude.rs  cli.rs  contract.rs  error.rs  fs.rs  lib.rs  main.rs  runner.rs  status_item.rs
crates/ctx-brief/tests/: brief.rs
crates/ctx-brief/tests/common/: mod.rs
crates/ctx-cage/: Cargo.toml
crates/ctx-cage/assets/: cage-nsswitch.conf  cage-resolv.conf  cage-rules.md
crates/ctx-cage/src/: broker.rs  cli.rs  error.rs  lib.rs  protocol.rs  proxy.rs  runtime.rs  spawn.rs  summarize.rs
crates/ctx-cage/src/bwrap/: build.rs  config.rs  discover.rs  mod.rs
crates/ctx-cage/src/lifecycle/: cagevars.rs  env.rs  mod.rs  prepare.rs  run.rs  serve.rs  teardown.rs
crates/ctx-cage/src/lifecycle/run/: preflight.rs  pty.rs  tests.rs
crates/ctx-cage/src/lifecycle/run/preflight/: tests.rs
crates/ctx-cage/src/lifecycle/run/pty/: input_relay.rs  mod.rs
crates/ctx-cage/src/lifecycle/run/tests/: diagnostic.rs
crates/ctx-cage/src/proxy/: head.rs
crates/ctx-cage/tests/: broker_loopback.rs  bwrap_build.rs  bwrap_discover.rs  cage_assets.rs  cagevars.rs  cli.rs  protocol.rs  proxy.rs  summarize.rs
crates/ctx-cage/tests/common/: mod.rs
crates/ctx-check/: Cargo.toml
crates/ctx-check/src/: checks.rs  cli.rs  error.rs  lib.rs  main.rs  model.rs  parse.rs  runner.rs
crates/ctx-check/tests/: checks.rs
crates/ctx-context/: Cargo.toml
crates/ctx-context/src/: chain.rs  cli.rs  env.rs  error.rs  freshness.rs  hook.rs  lib.rs  main.rs  repo_path.rs  serve.rs  session.rs
crates/ctx-context/tests/: chain_serve.rs  freshness.rs  hook_session.rs
crates/ctx-core/: Cargo.toml
crates/ctx-core/src/: access.rs  hashtree.rs  lib.rs  status_table.rs
crates/ctx-scan/: Cargo.toml
crates/ctx-scan/src/: cli.rs  contract.rs  error.rs  fs.rs  hash.rs  lib.rs  main.rs  readme.rs  reconcile.rs  render.rs  runner.rs  staleness.rs  walker.rs
crates/ctx-scan/tests/: reconcile.rs  scan.rs  stop_hook.rs  walker.rs
crates/ctx-scan/tests/common/: mod.rs
crates/ctx-status/: Cargo.toml
crates/ctx-status/src/: cli.rs  contract.rs  error.rs  fs.rs  lib.rs  main.rs  model.rs  render.rs  runner.rs
crates/ctx-status/src/cli/: tests.rs
crates/ctx-status/src/runner/: tests.rs
crates/ctx-summarize/: Cargo.toml
crates/ctx-summarize/src/: agent.rs  cache.rs  cli.rs  cpath.rs  error.rs  fs.rs  lib.rs  main.rs  progress.rs  rollup_input.rs  runner.rs
crates/ctx-summarize/tests/: summarize.rs
crates/ctx-verify/: Cargo.toml
crates/ctx-verify/src/: checks.rs  cli.rs  error.rs  lib.rs  main.rs  model.rs  runner.rs
crates/ctx-verify/src/checks/: specs.rs
crates/ctx-verify/tests/: checks.rs  checks_regen.rs  render.rs
docs/: DECISIONS.md  DYLINT_RULES.md  OPUS_CONTEXT_FRESHNESS_PROMPT.md  PROMPTING.md  SANDBOX.md  SPEC.md  STATUS.md  UNIMPLEMENTED.md  status.json
docs/references/: quality_improvement.md
docs/retired/: AUDIT.md
prompts/: README.md  auditor.md  briefer-gather.md  briefer-plan.md  summarizer-leaf.md  summarizer-rollup.md
reference-project/: .gitattributes  .gitignore  README.md
reference-project/.context/: intent.md
reference-project/scripts/: rationale_check.py  workspace_lints_check.sh
sandbox/: README.md  agent-demo.sh  broker-handler.sh  broker.sh  cage-adversary.sh  cage-demo.sh  cage-nsswitch.conf  cage-run.sh  claude-preflight.sh  pty-relay.py  stub-agent.sh  stub-claude.sh  tool-client.sh
scripts/: gen_tool_contracts.sh  no_allow_check.sh  retired_terms_check.sh
template/: .ctxignore  CLAUDE.md  Cargo.toml  clippy.toml  rust-toolchain.toml  rustfmt.toml
template/.context/: rollup.ctx
template/scripts/: ci.sh  install-tools.sh  rationale_check.py  update-template.sh
(+205 files in other folders)
