[package]
name = "ctx-access"
version = "0.1.0"
edition = "2021"
description = "Context-tree access broker CLI: the only sanctioned path to source for agent tasks."
publish = false

[lints]
workspace = true

[[bin]]
name = "ctx-access"
path = "src/main.rs"

[lib]
name = "ctx_access"
path = "src/lib.rs"

[dependencies]
ctx-core = { path = "../ctx-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
