[package]
name = "ctx-cage"
version = "0.1.0"
edition = "2021"
description = "Safety cage for autonomous agent runs: offline bwrap namespace with a writable workspace, masked secrets, and a host-side API proxy as the sole egress. ctx-run is the one-command billed launcher."
publish = false

[lints]
workspace = true

[[bin]]
name = "ctx-cage"
path = "src/bin/ctx_cage.rs"

[[bin]]
name = "ctx-run"
path = "src/bin/ctx_run.rs"

[lib]
name = "ctx_cage"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
