[package]
name = "ctx-context"
version = "0.1.0"
edition = "2021"
description = "Read-only context-chain server: prints the rollup+intent chain for a path; Claude Code hook mode injects it fail-open."
publish = false

[lints]
workspace = true

[[bin]]
name = "ctx-context"
path = "src/main.rs"

[lib]
name = "ctx_context"
path = "src/lib.rs"

[dependencies]
ctx-core = { path = "../ctx-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
ctx-core = { path = "../ctx-core" }
