[package]
name = "ctx-core"
version = "0.1.0"
edition = "2021"
description = "Shared foundational primitives: the security-sensitive access gate (secret/binary/gitignored deny) and the content-hash sidecar schema."
publish = false

[lints]
workspace = true

[lib]
name = "ctx_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
