[package]
name = "ctx-summarize"
version = "0.1.0"
edition = "2021"
description = "Leaf-up context-tree summarization runner: a thin shell over the prompt files and a pluggable agent."
publish = false

[lints]
workspace = true

[[bin]]
name = "ctx-summarize"
path = "src/main.rs"

[lib]
name = "ctx_summarize"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
